# scout

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile.swarm  README.md  Taskfile.yml  browser.go  browser.json  browser_test.go  crawl.go  crawl_test.go  doc.go  docker-compose.swarm.yml  element.go  element_test.go  eval.go  eval_test.go  extract.go  extract_test.go  form.go  form_test.go  go.mod  go.sum  network.go  network_test.go  option.go  option_unix.go  option_unix_test.go  page.go  page_test.go  paginate.go  paginate_test.go  ratelimit.go  ratelimit_test.go  recorder.go  search.go  (+2 more)
.claude/: settings.local.json
.claude-plugin/: plugin.json
agents/: browser-automation.md  site-tester.md  web-scraper.md
docker/: Dockerfile  Dockerfile.slim  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BACKLOG.md  BRAINSTORM.md  BUGS.md  CONTRIBUTORS.md  FEATURES.md  ISSUES.md  MILESTONES.md  ROADMAP.md  openapi.yaml
examples/: README.md
extensions/: extensions.go
firecrawl/: batch.go  batch_test.go  client.go  client_test.go  crawl.go  crawl_test.go  doc.go  error.go  extract.go  extract_test.go  http.go  integration_test.go  map.go  map_test.go  option.go  poll.go  scrape.go  scrape_test.go  search.go  search_test.go  testutil_test.go  types.go
hacks/: README.md
hooks/: hooks.json
plugins/: registry.json
recipes/: recipes.go  recipes_test.go
results/: dep-audit-2026-03-27.md
runbooks/: runbooks.go
sdk/python/: README.md  pyproject.toml
sdk/python/scout_plugin/: __init__.py  server.py
(+1137 files in other folders)
