[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout-plugin-sdk"
version = "1.0.0"
description = "Python SDK for building Scout browser automation plugins"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/inovacc/scout"
Repository = "https://github.com/inovacc/scout/tree/main/sdk/python"
